[package]
name = "zksync_prover_interface"
description = "Interfaces for interaction with ZKsync prover subsystem"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
zksync_types.workspace = true

serde.workspace = true
serde_with = { workspace = true, features = ["base64", "hex"] }
