[package]
name = "zksync_prover_metrics"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true, features = ["rt", "macros", "net"] }
vise.workspace = true
vise-exporter.workspace = true
