[package]
name = "zksync_tee_verifier"
description = "ZKsync library for TEE verification"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
zksync_crypto_primitives.workspace = true
zksync_merkle_tree = { workspace = true, default-features = false }
zksync_multivm.workspace = true
zksync_types.workspace = true
zksync_vm_interface.workspace = true

anyhow.workspace = true
serde.workspace = true
tracing.workspace = true

[dev-dependencies]
zksync_contracts.workspace = true
serde_json.workspace = true

bincode.workspace = true
