[package]
name = "zksync_vm_compare"
description = "Cross-VM execution comparison harness"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
zk_evm_1_5_2.workspace = true
zksync_multivm.workspace = true
zksync_airbender_verifier.workspace = true
zksync_types.workspace = true
zksync_vm2.workspace = true
zksync_cli_utils.workspace = true
zksync_vm_interface.workspace = true

anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
bincode.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
